force-app/main/default/objects/Commission_Total__c/Commission_Total__c.object-meta.xml
<CustomObject>
    <description>Aggregated commission amounts and attainment.</description>
    <label>Commission Total</label>
    <nameField>
        <displayFormat>COMTOTAL-{00000}</displayFormat>
        <label>Commission Total Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Totals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>