force-app/main/default/objects/Commission_Total__c/fields/Bridge_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Attainment__c</fullName>
    <formula>Total_Bridge_Commission__c / Bridge_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bridge Attainment %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>