force-app/main/default/objects/Commission_Total__c/fields/Bridge_Quota__c.field-meta.xml
<CustomField>
    <fullName>Bridge_Quota__c</fullName>
    <label>Bridge Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>