force-app/main/default/objects/Commission_Total__c/fields/CRE_Multi_Advance_Commission__c.field-meta.xml
<CustomField>
    <fullName>CRE_Multi_Advance_Commission__c</fullName>
    <description>Comes from the advance level</description>
    <inlineHelpText>Comes from the advance level</inlineHelpText>
    <label>CRE/Multi Advance Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>