force-app/main/default/objects/Commission_Total__c/fields/Multifamily_CRE_Commission__c.field-meta.xml
<CustomField>
    <fullName>Multifamily_CRE_Commission__c</fullName>
    <description>Comes from the deal level</description>
    <inlineHelpText>Comes from the deal level</inlineHelpText>
    <label>Multifamily/CRE Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>