force-app/main/default/objects/Commission_Total__c/fields/Term_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Term_Attainment__c</fullName>
    <formula>Total_Term_Commission__c  /Term_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Term Attainment %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>