force-app/main/default/objects/Commission_Total__c/fields/Term_Quota__c.field-meta.xml
<CustomField>
    <fullName>Term_Quota__c</fullName>
    <label>Term Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>