force-app/main/default/objects/Commission_Total__c/fields/Total_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Total_Attainment__c</fullName>
    <formula>(Total_Attainment_Amount__c /  Total_Quota__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Attainment %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>