force-app/main/default/objects/Commission_Total__c/fields/Total_Attainment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Attainment_Amount__c</fullName>
    <formula>Total_Bridge_Commission__c + Total_Term_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Attainment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>