force-app/main/default/objects/Commission_Total__c/fields/Total_Bridge_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Bridge_Commission__c</fullName>
    <label>Total Bridge Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>