force-app/main/default/objects/Commission_Total__c/fields/Total_Bridge_Commission_Total__c.field-meta.xml
<CustomField>
    <fullName>Total_Bridge_Commission_Total__c</fullName>
    <formula>Multifamily_CRE_Commission__c +  Total_Bridge_Commission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>CRE Commission from deal level + Non CRE from advance level</inlineHelpText>
    <label>Total Bridge Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>