force-app/main/default/objects/Commission_Total__c/fields/Total_Quota__c.field-meta.xml
<CustomField>
    <fullName>Total_Quota__c</fullName>
    <formula>Term_Quota__c +  Bridge_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>