force-app/main/default/objects/Commission_Total__c/fields/Total_Term_Commission__c.field-meta.xml
<CustomField>
    <fullName>Total_Term_Commission__c</fullName>
    <label>Total Term Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>