force-app/main/default/objects/Commission_Total__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Total_Bridge_Commission__c</columns>
    <columns>Total_Term_Commission__c</columns>
    <columns>Total_Attainment_Amount__c</columns>
    <columns>Bridge_Attainment__c</columns>
    <columns>Term_Attainment__c</columns>
    <columns>Total_Quota__c</columns>
    <columns>Total_Attainment__c</columns>
    <columns>Bridge_Quota__c</columns>
    <columns>Term_Quota__c</columns>
    <columns>Quarter_Start_Date__c</columns>
    <columns>Quarter_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>