force-app/main/default/objects/Commission_Total__c/listViews/Previous_Quarter.listView-meta.xml
<ListView>
    <fullName>Previous_Quarter</fullName>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Total_Bridge_Commission__c</columns>
    <columns>Total_Term_Commission__c</columns>
    <columns>Total_Attainment_Amount__c</columns>
    <columns>Bridge_Attainment__c</columns>
    <columns>Term_Attainment__c</columns>
    <columns>Total_Quota__c</columns>
    <columns>Total_Attainment__c</columns>
    <columns>Bridge_Quota__c</columns>
    <columns>Term_Quota__c</columns>
    <columns>Quarter_Start_Date__c</columns>
    <columns>Quarter_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Quarter_Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Quarter_Start_Date__c</field>
        <operation>equals</operation>
        <value>LAST_QUARTER</value>
    </filters>
    <label>Previous Quarter</label>
</ListView>